Fixed svg scaling on safari

--- a/assets/scss/metalogo.scss
+++ b/assets/scss/metalogo.scss
@@ -4,7 +4,7 @@
     svg {
         display: block;
         width: 100%;
-        height: auto;
+        height: 100%;
         max-width: map-get($breakpoints, phone) - ($container-padding * 2);
     }
 }
